k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aims
  labels:
    name: aims
    environment: production
